--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,23 +1,26 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
   <div class="container">
-    <a class="navbar-brand" href="#">Dating App</a>
-    @if (accountService.currentUser()) {
-    <ul class="navbar-nav me-auto mb-2 mb-md-0">
-      <li class="nav-item">
-        <a class="nav-link">Matches</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Lists</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Messages</a>
-      </li>
-    </ul>
+    <a  routerLink="/" class="navbar-brand" routerLinkActive="active">Dating App</a>
+   
+    <ul class="navbar-nav me-auto mb-2 mb-md-0"> 
+      @if (accountService.currentUser()) {
+        <li class="nav-item">
+          <a routerLink="/members" class="nav-link" routerLinkActive="active">Matches</a>
+        </li>
+        <li class="nav-item">
+          <a  routerLink="/lists" class="nav-link" routerLinkActive="active">Lists</a>
+        </li>
+        <li class="nav-item">
+          <a  routerLink="/messages" class="nav-link"  routerLinkActive="active">Messages</a>
+        </li>
     }
+    </ul>
 
     @if(accountService.currentUser()) {
     <div dropdown class="dropdown">
-      <a dropdownToggle class="dropdown-toggle text-light text-decoration-none">Welcome user</a>
+      <a dropdownToggle class="dropdown-toggle text-light text-decoration-none">
+        Welcome {{accountService.currentUser()?.username | titlecase}}
+      </a>
       <div *dropdownMenu class="dropdown-menu">
         <a class="dropdown-item">Edit profile</a>
         <div class="dropdown-divider"></div>
@@ -33,7 +36,7 @@
       <input name="username" [(ngModel)]="model.username" class="form-control me-2" placeholder="Username">
       <input name="password" [(ngModel)]="model.password" class="form-control me-2" placeholder="Password"
         type="password">
-      <button class="btn btn-outline-success" type="submit">Login</button>
+      <button class="btn btn-success" type="submit">Login</button>
     </form>
     }
 
